Bug 275339 - REGRESSION (275396@main): [iOS] Safari sometimes crashes under -[WKContentView textStylingAtPosition:inDirection:]
Summary: REGRESSION (275396@main): [iOS] Safari sometimes crashes under -[WKContentVie...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-06-10 19:11 PDT by Wenson Hsieh
Modified: 2024-06-11 06:32 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2024-06-10 19:11:20 PDT
rdar://127571335
Comment 1 Wenson Hsieh 2024-06-10 19:24:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29694
Comment 2 EWS 2024-06-11 06:32:25 PDT
Committed 279907@main (3d0b28687be1): <https://commits.webkit.org/279907@main>

Reviewed commits have been landed. Closing PR #29694 and removing active labels.